- argument 'pers' in plot.gam (1.8-23, Nov 2017)

Issues: 

* t2 in bam(...,discrete=TRUE) - not treated as tensor products at 
present, and reparameterization needs checking (also for bam). 

* OpenBLAS 0.3.2/3 appears not to be thread safe at present - can
  cause problems when opemmp multithreading.

* Null deviance igores offset in gam.fit4

1.8-27

* added routine cholup for rank one modification of Cholesky factor.

* two stage gam/bam fitting now allows 'sp' to be modified. 

* predict.gam could fail with type="response" for families requiring the 
  response to be provided in this case (e.g. cox.ph). Fixed.

* sp.vcov defaults to extracting edge corrected log sp cov matrix, if 
  gam(...,gam.control(edge.control=TRUE)) used for fitting. 

* gam(...,gam.control(edge.correct=TRUE)) could go into infinite loop if
  sp was effectively zero. Corrected.


1.8-26

* LINPACK dependency removed.

* Added service routine choldrop to down date a Cholesky factor on row/col
  deletion.

* liu2 had a check messed up when vectorized. Fix to stop vector being 
  checked for equality to zero.

1.8-25

** bam(...,discrete=TRUE) methods improved. Cross products now usually faster 
   (can be much faster) and code can now make better use of optimised BLAS. 

* fix to 'fs' smooth.construct method and smooth2random method, to allow
  constructor to be called without a "gamm" atribute set on the smooth spec
  but still get a sensible result from smooth2random (albeit never using
  sarse matrices). Useful for other packages using constructors and 
  smooth2random, for 'fs' smooths.

* The mrf smooth constructor contained a obsolete hack in which the term 
  dimension was set to 2 to avoid plotting when used as a te marginal. This 
  messed up side constraints for terms where a mrf smooth was a main effect 
  and te marginal. Fixed. 

* extract.lme.cov/2 documentation modified to cover NA handling properly, and 
  routines modified to not require data to be supplied.
